# koala_budget

./: .dockerignore  .env.dev.example  .env.example  .env.production.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  DEPLOYMENT.md  Dockerfile.dev  Dockerfile.web  Dockerfile.worker  LICENSE.md  Makefile  PLAID_ACCOUNT_MAPPING_SUMMARY.md  PLAID_FRONTEND_INTEGRATION.md  README.md  custom.mk  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.shared.yml  docker-compose.yml  docker_startup.sh  manage.py  package-lock.json  package.json  pegasus-config.yaml  pyproject.toml  tsconfig.json  vite.config.ts
.claude/agents/: senior-architect.md
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy.yml  e2e.yml  tests.yml
api-client/: runtime.ts
api-client/.openapi-generator/: FILES
api-client/apis/: AApi.ts  BankFeedApi.ts  JournalApi.ts  PegasusApi.ts  PlaidApi.ts  TeamsApi.ts  index.ts
api-client/models/: Account.ts  AggregateEmployeeData.ts  BankFeedRow.ts  BankFeedRowSourceEnum.ts  BankTransaction.ts  BankTransactionSourceEnum.ts  BatchCategorizeRequest.ts  BatchIds.ts  BatchMoveAccountRequest.ts  BatchReconcileRequest.ts  BatchSetDescriptionRequest.ts  BatchSetPayeeRequest.ts  CategorizeTransactionsRequest.ts  CreateLinkTokenResponse.ts  DepartmentEnum.ts  Employee.ts  ExchangePublicTokenRequest.ts  ExchangePublicTokenResponse.ts  ImportedTransaction.ts  Invitation.ts  JournalEntry.ts  JournalEntrySourceEnum.ts  JournalEntryStatusEnum.ts  JournalLine.ts  ManualTransaction.ts  Membership.ts  OpenInvitation.ts  PaginatedBankFeedRowList.ts  PaginatedBankTransactionList.ts  PaginatedEmployeeList.ts  PaginatedImportedTransactionList.ts  PaginatedInvitationList.ts  PaginatedJournalEntryList.ts  PaginatedPlaidAccountList.ts  PaginatedPlaidItemList.ts  PaginatedPlaidTransactionList.ts  PaginatedSimpleLineList.ts  PaginatedSimpleTransactionList.ts  PaginatedTeamList.ts  PaginatedTransactionRowList.ts  (+36 more)
apps/accounts/: admin.py  api_views.py  forms.py  models.py  querysets.py  serializers.py  tests.py  urls.py  views.py
apps/api/: middleware.py  throttling.py
apps/bank_feed/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/budget/: admin.py  forms.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/budgeting/: __init__.py  admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/chat/: models.py
apps/goals/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/journal/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/ledger/: admin.py  models.py  tasks.py
apps/plaid/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/reports/: admin.py  exports.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
apps/subscriptions/: helpers.py  metadata.py  webhooks.py
apps/teams/: forms.py  models.py  signals.py
apps/teams_example/: tests.py
apps/testing/: urls.py  views.py
apps/transactions/: admin.py  forms.py  models.py  urls.py  views.py
apps/users/: emails.py  services.py  signals.py  urls.py  views.py
apps/utils/: models.py
apps/web/: meta.py  urls.py
assets/javascript/: app.js
context/: AGENTS.md  CLAUDE.md  PLAID_ACCOUNT_MAPPING_TESTING.md  PLAID_TESTING_GUIDE.md  bank_feed_ledger_architecture_plan.md  bank_feed_rearchitecture_implementation_plan.md  income_statement_drilldown_prompt.md  plaid_bank_feed_architecture.md
deploy/: README.md  app-spec.yaml  deploy-dev.sh  deploy-prod.sh  deploy-shared.sh  deploy.sh  init-ssl.sh  setup-git-crypt.sh
deploy/nginx/: nginx.conf
docs/: MULTI_ENVIRONMENT_PLAN.md  QUICKSTART_MULTI_ENV.md  README.md  SECRETS_MANAGEMENT.md  Todo.md  actual_tooltip_plan.md  api-guide.md  architecture.md  data-model.md  deployment.md  e2e-testing-plan.md  erd.md  frontend-guide.md  getting-started.md  goals_design.md  reports.md  saas-gaps-plan.md  sankey-diagram-plan.md
e2e/: conftest.py  factories.py
e2e/pages/: accounts.py  auth.py  bank_feed.py  base.py  budget.py  reports.py  transactions.py
e2e/tests/: test_accounts.py  test_auth.py  test_bank_feed.py  test_budget.py  test_reports.py  test_transactions.py
frontend/: package-lock.json  package.json
koala_budget/: asgi.py  celery.py  settings.py  settings_e2e.py  settings_production.py  settings_test.py  urls.py  wsgi.py
templates/account/: delete_account.html  login.html  profile.html
templates/accounts/: account_bulk_edit.html  account_confirm_delete.html  account_detail.html  account_form.html  account_list.html  accountgroup_confirm_delete.html  accountgroup_detail.html  accountgroup_form.html  accountgroup_list.html  accounts_home.html  payee_confirm_delete.html  payee_detail.html  payee_form.html  payee_list.html
templates/bank-feed/: bank_feed_home.html
templates/bank_feed/: bank_feed_base.html  bank_feed_home.html
(+161 files in other folders)
