[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    ".direnv",
    ".git",
    ".ruff_cache",
    "node_modules",
    "migrations",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
fixable = [
    "ALL",
]
unfixable = []
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.sources]
# allow installing django-celery-beat 2.8.1 with django 6.0
# until https://github.com/celery/django-celery-beat/issues/977 is resolved
django-celery-beat = { git = "https://github.com/celery/django-celery-beat", rev = "bd429063cbb227c00905e7693c38895e44ff8e47" }

[tool.coverage.run]
source = ["apps", "koala_budget"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/tests.py",
    "koala_budget/settings*.py",
    "koala_budget/wsgi.py",
    "koala_budget/asgi.py",
]

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "koala_budget.settings_e2e"
testpaths = ["e2e"]
# Give Playwright 30 s for navigation/actions (built JS bundles are slower in CI)
playwright_timeout = 30000

[tool.setuptools]
py-modules = []

[project]
name = "koala-budget"
version = "0.1.0"
description = "Budgeting and expense tracking app for freelancers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0",
    "celery",
    "celery-progress",
    "celery[redis]",
    "channels[daphne]",
    "channels_redis",
    "dj-stripe>=2.9,<2.10",
    "django-allauth[socialaccount,mfa,headless]>=65.13.0",
    "django-anymail[mailgun]", # email services
    "django-browser-reload",
    "django-celery-beat",
    "django-cors-headers",
    "django-environ",
    "django-health-check",
    "django-hijack",
    "django-vite>=3.1.0",
    "django-waffle",
    "djangorestframework",
    "djangorestframework-api-key",
    "docutils",
    "drf-spectacular",
    "httpx>=0.28.1",
    "litellm<1.77.2",
    "markdown",
    "nh3>=0.2.21",
    "openai",
    "plaid-python>=38.0.0",
    "psycopg2-binary",
    "pydantic-ai>=1.0",
    "openpyxl>=3.1.0",  # Excel file parsing
    "python-dateutil",
    "redis",
    "requests",
    "sentry-sdk[django]>=2.33.2",
    "stripe<12.0",
    "whitenoise[brotli]",
]

[dependency-groups]
dev = [
    "coverage[toml]",
    "django-debug-toolbar",
    "flower",
    "pre-commit",
    "ruff>=0.13.1",
]
e2e = [
    "factory-boy>=3.3",
    "playwright>=1.40",
    "pytest>=8.0",
    "pytest-django>=4.9",
    "pytest-playwright>=0.6",
]
prod = [
    "gunicorn",
    "uvicorn[standard]",
]
